Fix larger-width images not fitting the container on fit-width option
I HOPE this does not break the layout on any screen or image size.

--- a/src/static/reader/imagecontainer.css
+++ b/src/static/reader/imagecontainer.css
@@ -11,9 +11,12 @@
 }
 
 .fit-width {
-	height: 100%;
 	width: 100%;
 	object-fit: contain;
+	img {
+		width: auto;
+		max-width: 100%;
+	}
 }
 
 .stretch-width {
